--- a/news/src/components/navbar/navbar.css
+++ b/news/src/components/navbar/navbar.css
@@ -1,14 +1,24 @@
+
+.navigation{
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+}
+.container1 {
+    width: 1700px !important;
+    max-width: 1700px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .navbar {
     height: 55px;
-    list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
     display: flex;
-    justify-content: center;
     align-items: center;
+    width: 1500px;
+    justify-content: space-evenly;
 }
 
 .navbar > li {
@@ -19,11 +29,11 @@
     display: block;
     color: #000000;
     text-align: center;
-    padding: 20px 10px;
+    padding: 15px 7px;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 1rem;
     line-height: 1rem;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .navbar > li > a:hover, .dropdown:hover .dropbtn {
@@ -35,6 +45,7 @@
 }
 
 .dropdown-content {
+    top :100px;
     display: none;
     position: absolute;
     color: rgba(165, 10, 2, 1);
@@ -55,9 +66,9 @@
     text-decoration: none;
     display: block;
     text-align: left;
-    font-size: 12px;
-    line-height: 8px;
-    font-weight: 600;
+    font-size: 1rem;
+    line-height: 1rem;
+    font-weight: 700;
 }
 
 .dropdown-content > li > a:hover {
@@ -68,4 +79,16 @@
     display: block;
     list-style-type: none;
     padding: 0;
+}
+.is-last .dropdown-content {
+    right: 100px;
+}
+.bars {
+    color:#7a0101
+}
+.home{
+    font-size: 1.5rem;
+    background-color: #a50a02;
+    padding: .4rem;
+    color: #fff;
 }
