update(theme): gan theme cho trang Article

--- a/news/src/index.css
+++ b/news/src/index.css
@@ -16,7 +16,7 @@ code {
 }
 
 a {
-    color: #212529;
+    /*color: #212529;*/
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
